deploy/k8s/mock-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-backend
  namespace: mini-llm-serving
  labels:
    app.kubernetes.io/name: mock-backend
    app.kubernetes.io/part-of: mini-llm-serving-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mock-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mock-backend
        app.kubernetes.io/part-of: mini-llm-serving-platform
    spec:
      containers:
        - name: mock-backend
          image: mini-llm-serving-platform:local
          imagePullPolicy: IfNotPresent
          command: ["uvicorn"]
          args:
            - serving.mock_backend.app:app
            - --host
            - 0.0.0.0
            - --port
            - "9000"
          ports:
            - name: http
              containerPort: 9000
          livenessProbe:
            httpGet:
              path: /v1/models
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /v1/models
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
