deploy/k8s/mock-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-backend
  namespace: mini-llm-serving
  labels:
    app.kubernetes.io/name: mock-backend
    app.kubernetes.io/part-of: mini-llm-serving-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mock-backend
  ports:
    - name: http
      port: 9000
      targetPort: http
