deploy/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: mini-llm-serving
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: mini-llm-serving-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
