deploy/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mini-llm-serving
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: mini-llm-serving-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
