deploy/k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: mini-llm-serving
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: mini-llm-serving-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mini-llm.local
      secretName: mini-llm-serving-tls
  rules:
    - host: mini-llm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
